--- a/pages/templates/home.html
+++ b/pages/templates/home.html
@@ -3,4 +3,18 @@
 
 {% block content %}
 <h1>Homepage</h1>
+
+
+<article id="top" class="wrapper style1">
+    <div class="container">
+        <div class="row">
+            <div class="col-4 col-5-large col-12-medium">
+                    <h1>Hi. I'm <strong>Jesse Johnson</strong>.</h1>
+                </header>
+                <p>An IT Technestion during the day but studying his way to get a bachelor's degree in ISDS at LSU during the night. </p>
+                <a href="about" class="button large scrolly">Learn about what I do</a>
+            </div>
+        </div>
+    </div>
+</article>
 {% endblock content %}
